<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MeetingUser.ViewTL">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarViewTlUser"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:id="@+id/toolbar_text_tlMeeting" style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJudul"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/data_rapat"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt2"
                            android:layout_width="match_parent"
                            android:text="@string/topik"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlTopik"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt3"
                            android:layout_width="match_parent"
                            android:text="@string/tgl"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlTgl"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt5"
                            android:layout_width="match_parent"
                            android:text="@string/waktu_mulai"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlWaktuM"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt6"
                            android:layout_width="match_parent"
                            android:text="@string/waktu_selesai"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlWaktuS"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt7"
                            android:layout_width="match_parent"
                            android:text="@string/tempat"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlTempat"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt8"
                            android:layout_width="match_parent"
                            android:text="@string/point1"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlPoin1"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/poin2"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlPoin2"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/poin3"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlPoin3"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/poin4"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlPoin4"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/poin5"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlPoin5"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/lampiran"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlLampiran"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/data_pegawai"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/name"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlNama"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/nip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlNip"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/jabatan"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlJabatan"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/dataTl"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="@string/tindakLanjut"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tlKaban"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>